--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -1,6 +1,6 @@
 <head>
 <title>ARMI Website</title>
-<link rel="stylesheet" type="text/css" href="base.css">
+<link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 
 
