front end commit

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -4,37 +4,37 @@
 </head>
 <div id ="full-container">
   <div id="content-container">
-<div id="head-container">
-   <div id="header">
-   </div>
-   <div id="search-container">
+    <div id="head-container">
+      <div id="header">
+      </div>
+      <div id="search-container">
 <input type="hidden" name="dff_view" value="grid">
         Search:<input type="text" name="dff_keyword" size="30" maxlength="50">
 <input type="submit" value="Search">
-   </div>
-</div>
-</div>
- <div id="content-container">
-<div id="top-container">
-  <div id="mainPhoto">
+      </div>
+    </div>
   </div>
-     </div>
   <div id="content-container">
-  <div id="navigation-container">
-   <div id="navigation">
-   <ul>
+    <div id="top-container">
+      <div id="mainPhoto">
+      </div>
+    </div>
+    <div id="content-container">
+      <div id="navigation-container">
+<div id="navigation">
+<ul>
 <li><a href="http://www.google.com"><big>Home</big></a></li>
 <li><a href="#"><big>About</big></a></li>
 <li><a href="#"><big>Products</big></a></li>
 <li><a href="#"><big>My Account</big></a></li>
 <li><a href="#"><big>FAQ</big></a></li>
 <li><a href="#"><big>Support</big></a></li>
-   </ul>
-   </div>
+</ul>
 </div>
-</div>
-   <div id="content-container">
-<div id="content-container2">
+      </div>
+     </div>
+    <div id="content-container">
+      <div id="content-container2">
 <div id="content">
 <h2>
 Page Heading
@@ -60,16 +60,17 @@ who I love with all my heart, my mother."[14]"
 <h3> <b>LOGIN</b> </h3>
 </style>
 <form action="the web site" method="post">
-<p>Username:<input align="right" type="text" name="uname" /><br>
-Password :<input align="right" name="passw" type="text" /><br>
-<input type="submit" name="Log in" value="Log in" /></p>
+<p id="text">
+Username:<input id="input" align="right" type="text" name="uname" /><br>
+Password:<input id="input" align="right" name="passw" type="text" /><br>
+<input id="button" type="submit" name="Log in" value="Log in" /></p>
 </form>
 </h3>
-<a href="#"> <p> Lost password ?</p> </a>
-<a href="#"> <p> Not registed yet ? </p> </a>
+<a id="text1" href="#"> <p> Lost password ?</p> </a>
+<a id="text1" href="#"> <p> Not registed yet ? </p> </a>
 </div>
-</div>
-   <div id="content-container">
+      </div>
+      <div id="content-container">
 <div id="quicklink-container">
 <h3>
 FIND A ROOM
@@ -94,15 +95,15 @@ CONTACT US
 click here to contact us
 </p>
 </div>
-   </div>
-   <div id="footer-container">
+      </div>
+      <div id="footer-container">
 <div id="footer">
 <p>
 Copyrights
 Made by Group Y5 2011
 </p>
 </div>
-   </div>
-</div>
-</div>
- </html>
+      </div>
+    </div>
+ </div>
+</html>
