--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -4,57 +4,37 @@
 </head>
 <div id ="full-container">
   <div id="content-container">
-    <div id="head-container">
-      <div id="header">
-      </div>
-      <div id="search-container">
-<<<<<<< HEAD:frontend/html/base.html
+<div id="head-container">
+   <div id="header">
+   </div>
+   <div id="search-container">
 <input type="hidden" name="dff_view" value="grid">
         Search:<input type="text" name="dff_keyword" size="30" maxlength="50">
 <input type="submit" value="Search">
-=======
-	<input type="hidden" name="dff_view" value="grid">
-        Search:<input type="text" name="dff_keyword" size="30" maxlength="50">
-	<input type="submit" value="Search">
->>>>>>> c0e4ff396c8eb200c9c275afd42e80d4b944e771:frontend/html/base.html
-      </div>
-    </div>
+   </div>
+</div>
+</div>
+ <div id="content-container">
+<div id="top-container">
+  <div id="mainPhoto">
   </div>
+     </div>
   <div id="content-container">
-    <div id="top-container">
-      <div id="mainPhoto">
-      </div>
-    </div>
-    <div id="content-container">
-      <div id="navigation-container">
-<<<<<<< HEAD:frontend/html/base.html
-<div id="navigation">
-<ul>
+  <div id="navigation-container">
+   <div id="navigation">
+   <ul>
 <li><a href="http://www.google.com"><big>Home</big></a></li>
 <li><a href="#"><big>About</big></a></li>
 <li><a href="#"><big>Products</big></a></li>
 <li><a href="#"><big>My Account</big></a></li>
 <li><a href="#"><big>FAQ</big></a></li>
 <li><a href="#"><big>Support</big></a></li>
-</ul>
+   </ul>
+   </div>
 </div>
-=======
-	<div id="navigation">
-	<ul>
-	<li><a href="http://www.google.com"><big>Home</big></a></li>
-	<li><a href="#"><big>About</big></a></li>
-	<li><a href="#"><big>Products</big></a></li>
-	<li><a href="#"><big>My Account</big></a></li>
-	<li><a href="#"><big>FAQ</big></a></li>
-	<li><a href="#"><big>Support</big></a></li>
-	</ul>
-	</div>
->>>>>>> c0e4ff396c8eb200c9c275afd42e80d4b944e771:frontend/html/base.html
-      </div>
-     </div>
-    <div id="content-container">
-      <div id="content-container2">
-<<<<<<< HEAD:frontend/html/base.html
+</div>
+   <div id="content-container">
+<div id="content-container2">
 <div id="content">
 <h2>
 Page Heading
@@ -80,17 +60,16 @@ who I love with all my heart, my mother."[14]"
 <h3> <b>LOGIN</b> </h3>
 </style>
 <form action="the web site" method="post">
-<p id="text">
-Username:<input id="input" align="right" type="text" name="uname" /><br>
-Password:<input id="input" align="right" name="passw" type="text" /><br>
-<input id="button" type="submit" name="Log in" value="Log in" /></p>
+<p>Username:<input align="right" type="text" name="uname" /><br>
+Password :<input align="right" name="passw" type="text" /><br>
+<input type="submit" name="Log in" value="Log in" /></p>
 </form>
 </h3>
-<a id="text1" href="#"> <p> Lost password ?</p> </a>
-<a id="text1" href="#"> <p> Not registed yet ? </p> </a>
+<a href="#"> <p> Lost password ?</p> </a>
+<a href="#"> <p> Not registed yet ? </p> </a>
 </div>
-      </div>
-      <div id="content-container">
+</div>
+   <div id="content-container">
 <div id="quicklink-container">
 <h3>
 FIND A ROOM
@@ -115,85 +94,16 @@ CONTACT US
 click here to contact us
 </p>
 </div>
-      </div>
-      <div id="footer-container">
+   </div>
+   <div id="footer-container">
 <div id="footer">
 <p>
 Copyrights
 Made by Group Y5 2011
 </p>
 </div>
-=======
-	  <div id="content">
-	  <h2>
-	  Page Heading
-	  </h2>
-	   <p>
-	    "Aubrey Drake Graham was born on October 24, 1986, in Toronto, Ontario.
-	    He is the son of Dennis Graham, a drummer who worked with Jerry Lee Lewis,
-	    and Sandi Graham, an educator. Two of his uncles, Larry Graham and Teenie
-	    Hodges, are also musicians.[3][4][5] Graham's father is an African American
-	    from Memphis, Tennessee, and Graham's mother is a white Jewish Canadian. He
-	    attended a Jewish day school and had a Bar Mitzvah.[6][7][8] His parents
-	    divorced when he was five years old, and he was raised by his mother in
-	    Toronto's wealthy Forest Hill neighbourhood.[9][10] Graham attended high
-	    school at Forest Hill Collegiate Institute, where he began acting,[11] but
-	    did not graduate.[12] He spent most summers with his father in Memphis.[13]
-	    Graham stated that his parents' divorce greatly affected him as a person,
-	    saying, ?I had to become a man very quickly and be the backbone for a woman
-	    who I love with all my heart, my mother."[14]"
-	  </p>
-	  </div>
-	  <div id="aside">
-	    <h3>
-	    <h3> <b>LOGIN</b> </h3>
-	    </style>
-	    <form action="the web site" method="post">
-	    <p id="text">
-		Username:<input id="input" align="right" type="text" name="uname" /><br>
-		Password:<input  id="input" align="right" name="passw" type="text" /><br>
-	    <input id="button" type="submit" name="Log in" value="Log in" /></p>
-	    </form>
-	    </h3>
-	    <a id="text1" href="#"> <p> Lost password ?</p> </a>
-	    <a id="text1" href="#"> <p> Not registed yet ? </p> </a>
-	  </div>
-      </div>
-      <div id="content-container">
-	    <div id="quicklink-container">
-	    <h3>
-	    FIND A ROOM
-	    </h3>
-	    <p>
-	    click here to find a room
-	    </p>
-	    </div>
-	    <div id="quicklink-container">
-	    <h3>
-	    BUY RFID DEVICES
-	    </h3>
-	    <p>
-	    click here to buy rfid devices#
-	    </p>
-	    </div>
-	    <div id="quicklink-container">
-	    <h3>
-	    CONTACT US
-	    </h3>
-	    <p>
-	    click here to contact us
-	    </p>
-	    </div>
-      </div>
-      <div id="footer-container">
-	  <div id="footer">
-	  <p>
-	  Copyrights
-	  Made by Group Y5 2011
-	  </p>
-	  </div>
->>>>>>> c0e4ff396c8eb200c9c275afd42e80d4b944e771:frontend/html/base.html
-      </div>
-    </div>
- </div>
-</html>
+   </div>
+</div>
+</div>
+ </html>
+
