--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -60,13 +60,13 @@ who I love with all my heart, my mother."[14]"
 <h3> <b>LOGIN</b> </h3>
 </style>
 <form action="the web site" method="post">
-<p>Username:<input align="right" type="text" name="uname" /><br>
-Password :<input align="right" name="passw" type="text" /><br>
-<input type="submit" name="Log in" value="Log in" /></p>
+<p>Username:<input id="input" align="right" type="text" name="uname" /><br>
+Password :<input align="right"  id="input" name="passw" type="text" /><br>
+<input id="button" type="submit" name="Log in" value="Log in" /></p>
 </form>
 </h3>
-<a href="#"> <p> Lost password ?</p> </a>
-<a href="#"> <p> Not registed yet ? </p> </a>
+<a href="#" id="text1"> <p> Lost password ?</p> </a>
+<a href="#" id="text1"> <p> Not registed yet ? </p> </a>
 </div>
 </div>
    <div id="content-container">
