--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -60,8 +60,9 @@ who I love with all my heart, my mother."[14]"
 <h3> <b>LOGIN</b> </h3>
 </style>
 <form action="the web site" method="post">
-<p>Username:<input id="input" align="right" type="text" name="uname" /><br>
-Password :<input align="right"  id="input" name="passw" type="text" /><br>
+<p id="text">Username:<input id="input" align="right" type="text" name="uname"
+/><br>
+Password : <input align="right"  id="input" name="passw" type="text" /><br>
 <input id="button" type="submit" name="Log in" value="Log in" /></p>
 </form>
 </h3>
