--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -53,21 +53,22 @@ did not graduate.[12] He spent most summers with his father in Memphis.[13]
 Graham stated that his parents' divorce greatly affected him as a person,
 saying, ?I had to become a man very quickly and be the backbone for a woman
 who I love with all my heart, my mother."[14]"
+
 </p>
 </div>
 <div id="aside">
+<h3>
 <h3> <b>LOGIN</b> </h3>
 </style>
 <form action="the web site" method="post">
-  <p id="text"><span class="label">Username:</span><input id="input"
-align="right"  type="text" name="uname" /><br>
-  <span class="label">Password:</span><input align="right"  id="input"
-  name="passw" type="text" /><br>
-  <input id="button" type="submit" name="Log in" value="Log in" /></p>
+<p id="text">Username:<input id="input" align="right" type="text" name="uname"
+/><br>
+Password : <input align="right"  id="input" name="passw" type="text" /><br>
+<input id="button" type="submit" name="Log in" value="Log in" /></p>
 </form>
-
-<a href="#" id="text1">Lost password ?</a><br />
-<a href="#" id="text1">Not registed yet ?</a>
+</h3>
+<a href="#" id="text1"> <p> Lost password ?</p> </a>
+<a href="#" id="text1"> <p> Not registed yet ? </p> </a>
 </div>
 </div>
    <div id="content-container">
