making the user input align .. (using span)

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -71,10 +71,12 @@
 	<h3> <b>LOGIN</b> </h3>
 	  <form action="the web site" method="post">
 	  <p id="text">
-	  Username:<input id="input" align="right" type="text"    
-		      name="uname"/>  <br>
-	  Password:<input align="right"  id="input" name="passw" type="text"
-								      /><br>
+	  <span class="label" > Username: </span>
+		    <input id="input" align="right" type="text" name="uname"/>
+	  <br>
+	  <span class="label" > Password:</span>
+		<input align="right"  id="input" name="passw" type="text" />
+	  <br>
 	  <input id="button" type="submit" name="Log in" value="Log in" />
 	  </p>
 	  </form>
