--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -9,7 +9,7 @@
    </div>
    <div id="search-container">
 <input type="hidden" name="dff_view" value="grid">
-        Search:<input type="text" name="dff_keyword" size="30" maxlength="50">
+        <input type="text" name="dff_keyword" size="30" maxlength="50">
 <input type="submit" value="Search">
    </div>
 </div>
