updated after 101 lab

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -68,7 +68,7 @@
 	  </p>
 	</div>
 	<div id="aside" class="label">
-	<h3> <b>LOGIN</b> </h3>
+	<h3> <b>Login</b> </h3>
 	  <form action="the web site" method="post">
 	  <p id="text">
 	  <span class="label" > Username: </span>
@@ -95,15 +95,15 @@
       </div>
       <div id="content-container">
 	<div id="quicklink-container">
-	  <h3>FIND A ROOM</h3>
+	  <h3>Find a room</h3>
 	  <p>click here to find a room</p>
 	  </div>
 	  <div id="quicklink-container">
-	  <h3>BUY RFID DEVICE</h3>
+	  <h3>Buy an RFID tag</h3>
 	  <p>click here to buy rfid devices</p>
 	  </div>
 	  <div id="quicklink-container">
-	  <h3>CONTACT US</h3>
+	  <h3>Contact Us</h3>
 	  <p>click here to contact us</p>
 	</div>
     </div>
