removed whitespace around the site ;)

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <head>
 <title>ARMI Website</title>
 <link rel="stylesheet" type="text/css" href="../css/base.css">
@@ -114,5 +116,6 @@
    </div>
 </div>
 </div>
+</body>
  </html>
 
