updated html files

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html PUBLIC>
 <html>
-<body>
 <head>
 <title>ARMI Website</title>
 <link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
+<body>
 <div id ="full-container">
   <div id="content-container">
 <div id="head-container">
