changes to buttons

--- a/frontend/html/base.html
+++ b/frontend/html/base.html
@@ -15,7 +15,7 @@
 	<input type="hidden" name="dff_view" value="grid">
 	<input type="text" id="inputSearch" name="dff_keyword" size="28"
 	  maxlength="50">
-	<input type="submit" value="Search">
+	<input type="submit" value="" id="searchButton">
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
 	    <span class="label" > Password : </span>
 	    <input align="right" class="input" name="passw" type="text" >
 	    <br>
-	    <input id="button" type="submit" name="Log in" value="Log in" >
+	    <input id="button" type="submit" name="Log in" value="" >
 	    </p>
 	  </form>
 	  <a href="#" class="text1" >    Lost password ?  <br>  </a>
