--- a/frontend/html/support.html
+++ b/frontend/html/support.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>ARMI - Automated Room Management Interface </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <div id ="fullPage">
 
@@ -24,7 +24,7 @@
       </div> 
       <div id ="menuBar">
         <ul id ="menuBarArray">
-          <li> <a href="./index2.html" id ="homeButton"> </a></li>
+          <li> <a href="./index.html" id ="homeButton"> </a></li>
           <li> <a href="./aboutArmi.html" id ="aboutArmiButton"> </a></li>
           <li> <a href="./products.html" id ="productsButton"> </a></li>
           <li> <a href="./myAccount.html" id ="myAccountButton"> </a></li>
